04/17/2005  Ian Lewis <IanLewis@member.fsf.org>

    * AdapterNodes can now report what nodes can be added to them as children
      based on a DTD or schema.

04/15/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Did some spring cleaning. Updated documentation in many classes. Updated
      headers to correctly display copyrights and javadoc to correctly contain
      authors.

04/14/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added inactive code for storing completion info that is
      retrieved from a DTD or Schema.
    * XMLDocument now creates CompletionInfo objects to describe document
      structures but jsXe doesn't use it yet.

03/30/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Released 0.3 beta
    * Added some more javadoc to XMLDocument
    * Added some calls to syncContentWithDOM in XMLDocument
    * Added validation option

03/29/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated AdapterNode to make some methods private that were accidentally
      marked public

03/23/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Users can no longer remove namespace declarations when there are
      attributes that use it.

03/17/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Altered AdapterNode to support namespaces better. It handles adding and
      removing namespace declarations much better.

03/16/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug with the debug option in logging
    * Added a command line option to enable printing debug to the command line.
    * Fixed a bug in setModel() in XMLDocument

03/13/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the getAdapterNode() method in XMLDocument to check if the
      document is parsed and if not then attempt to go to parsed mode instead of
      simply returning null when in non-parsed mode.

03/09/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Released jsXe 0.3 pre15

03/08/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added dependency checking for plugins.